13 August 2008: Wouter
	- bug #203: nicer do-auto log message when user sets incompatible
	  options.
	- bug #204: variable name ameliorated in log.c.
	- bug #206: in iana_update, no egrep, but awk use.
	- ldns snapshot r2699 taken (includes DLV type).
	- DLV work, config file element, trust anchor read in.

12 August 2008: Wouter
	- finished adjusting testset to provide qtype NS answers.

11 August 2008: Wouter
	- Fixup rrset security updates overwriting 2181 trust status.
	  This makes validated to be insecure data just as worthless as
	  nonvalidated data, and 2181 rules prevent cache overwrites to them.
	- Fix assertion fail on bogus key handling.
	- dnssec lameness detection works on first query at trust apex.
	- NS queries get proper cache and dnssec lameness treatment.
	- fixup compilation without pthreads on linux.

8 August 2008: Wouter
	- NS queries are done after every referral.
	  validator is used on those NS records (if anchors enabled).

7 August 2008: Wouter
	- Scrubber more strict. CNAME chains, DNAMEs from cache, other 
	  irrelevant rrsets removed.
	- 1.0.2 released from 1.0 support branch.
	- fixup update-anchor.sh to work both in BSD shell and bash.

5 August 2008: Wouter
	- fixup DS test so apex nodata works again.

4 August 2008: Wouter
	- iana port update. 
	- TODO update.
	- fix bug 201: null ptr deref on cleanup while udp pkts wait for port.
	- added explanatory text for outgoing-port-permit in manpage.

30 July 2008: Wouter
	- fixup bug qtype DS for unsigned zone and signed parent validation.

25 July 2008: Wouter
	- added original copyright statement of OpenBSD arc4random code.
	- created tube signaling solution on windows, as a pipe replacement.
	  this makes background asynchronous resolution work on windows.
	- removed very insecure socketpair compat code. It also did not
	  work with event_waiting. Solved by pipe replacement.
	- unbound -h prints openssl version number as well.

22 July 2008: Wouter