@@ -1,3 +1,6 @@
+14 August 2008: Wouter
+	- synthesize DLV messages from the rrset cache, like done for DS.
+
 13 August 2008: Wouter
 	- bug #203: nicer do-auto log message when user sets incompatible
 	  options.
